--- a/css/gig.css
+++ b/css/gig.css
@@ -70,7 +70,7 @@
     text-transform: uppercase;
 }
 
-.gig-caption {
+.gig-caption, .gig-link {
     display: none;
 }
 
@@ -111,6 +111,20 @@
 } .gig-lightbox-title {
     font-size: 1.2em;
     font-weight: 700;
+} .gig-lightbox-button {
+    border: 2px solid black;
+    bottom: 5px;
+    display: block;
+    font-family: 'Oswald', sans-serif;
+    letter-spacing: 2px;
+    right: 5px;
+    padding: 5px 10px;
+    position: absolute;
+    text-transform: uppercase;
+} .gig-lightbox-button>a {
+    color: #333;
+} .gig-lightbox-button>a:hover {
+    color: black;
 }
 
 @media screen and (max-width: 600px) {
